quelques modifs sur le design

--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -33,6 +33,7 @@ file.reference.bcmail-jdk14-1.38.jar=C:\\Users\\Chacoul_Diarrassouba\\Downloads\
 file.reference.bcprov-jdk14-1.38.jar=C:\\Users\\Chacoul_Diarrassouba\\Downloads\\Compressed\\jar_files\\bcprov-jdk14-1.38.jar
 file.reference.bctsp-jdk14-1.38.jar=C:\\Users\\Chacoul_Diarrassouba\\Downloads\\Compressed\\jar_files\\bctsp-jdk14-1.38.jar
 file.reference.com.lowagie.text-2.1.7.jar=C:\\Users\\Chacoul_Diarrassouba\\Downloads\\Compressed\\com.lowagie.text-2.1.7.jar\\com.lowagie.text-2.1.7.jar
+file.reference.com.lowagie.text-2.1.7.jar.zip=A installer\\com.lowagie.text-2.1.7.jar.zip
 file.reference.DateChooser.jar=C:\\Users\\Chacoul_Diarrassouba\\Downloads\\Compressed\\1398197092_jdatechooser\\jdatechooser\\DateChooser.jar
 file.reference.dom4j-1.6.1.jar=C:\\Users\\Chacoul_Diarrassouba\\Downloads\\Compressed\\jar_files\\dom4j-1.6.1.jar
 file.reference.itext-4.2.1.jar=C:\\Users\\Chacoul_Diarrassouba\\Downloads\\Compressed\\jar_files\\itext-4.2.1.jar
@@ -61,7 +62,8 @@ javac.classpath=\
     ${libs.beans-binding.classpath}:\
     ${file.reference.DateChooser.jar}:\
     ${file.reference.rs2xml.jar}:\
-    ${file.reference.rs2xml.jar}
+    ${file.reference.rs2xml.jar}:\
+    ${file.reference.com.lowagie.text-2.1.7.jar.zip}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
